[tool.poetry]
name = "antei-api"
version = "0.1.2"
description = ""
authors = ["anteicodes"]
license = "Mit"

[tool.poetry.dependencies]
python = "^3.9"
bcrypt = "^3.2.0"
blackpink = "^0.6"
Django = "^3.2.12"
djongo = "^1.3.6"
emoji = "^1.4.2"
filetype = "^1.0.7"
html2text = "^2020.1.16"
humanfriendly = "^9.2"
#instagrapi = { git = "https://github.com/adw0rd/instagrapi.git", branch = "master" }
Js2Py = "^0.71"
lxml = "^4.6.3"
otakudesu = "^0.0.9"
pafy = "^0.5.5"
phlogo = "^0.6"
psycopg2 = "^2.9.1"
psycopg2-binary = "^2.9.1"
PySocks = "^1.7.1"
pydantic = "^1.8.2"
pycryptodomex = "^3.9.9"
requests = "^2.26.0"
saucenao-api = "^2.3.1"
simplejson = "^3.17.4"
youtube_dl = "^2021.6.6"
youtube-search-python = "^1.4.7"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
